--- a/CollisionsDB/CollisionsDB/Views/Account/Form.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Account/Form.cshtml
@@ -6,8 +6,8 @@
 
 <form method="post">
     <div asp-validation-summary="All"></div>
-    <label asp-for="CrashDatetime"><strong>Date of Collision:</strong></label><br />
-    <input type="datetime-local" asp-for="CrashDatetime" /><br />
+    <label asp-for="CrashDatetime"><strong>Date of Collision (Ex: 01/01/2000 10:10):</strong></label><br />
+    <input asp-for="CrashDatetime" /><br />
 
     <label asp-for="Route"><strong>Route Collision Occurred On:</strong></label><br />
     <input asp-for="Route" /><br />
@@ -29,7 +29,7 @@
         <option value="">Select a City</option>
         @foreach (City c in ViewBag.Cities)
         {
-            <option value="@c.CityId">@c.CityName</option>
+            <option value="@c.CityName">@c.CityName</option>
         }
     </select><br />
 
@@ -38,7 +38,7 @@
         <option value="">Select a County</option>
         @foreach (County c in ViewBag.Counties)
         {
-            <option value="@c.CountyId">@c.CountyName</option>
+            <option value="@c.CountyName">@c.CountyName</option>
         }
     </select><br />
 
@@ -54,136 +54,116 @@
 
     <label asp-for="WorkZoneRelated"><strong>Did the Collision Occur in a Work Zone:</strong></label><br />
     <select asp-for="WorkZoneRelated">
-        <option value="">Select an Option</option>
-        <option value="1">True</option>
         <option value="0">False</option>
+        <option value="1">True</option>q
     </select><br />
 
     <label asp-for="PedestrianInvolved"><strong>Was There a Pedestrian Involved:</strong></label><br />
     <select asp-for="PedestrianInvolved">
-        <option value="">Select an Option</option>
-        <option value="1">True</option>
         <option value="0">False</option>
+        <option value="1">True</option>
     </select><br />
 
     <label asp-for="BicyclistInvolved"><strong>Was There a Bicycle Involved:</strong></label><br />
     <select asp-for="BicyclistInvolved">
-        <option value="">Select an Option</option>
-        <option value="1">True</option>
         <option value="0">False</option>
+        <option value="1">True</option>
     </select><br />
 
     <label asp-for="MotorcycleInvolved"><strong>Was There a Motorcycle Involved:</strong></label><br />
     <select asp-for="MotorcycleInvolved">
-        <option value="">Select an Option</option>
-        <option value="1">True</option>
         <option value="0">False</option>
+        <option value="1">True</option>
     </select><br />
 
     <label asp-for="ImproperRestraint"><strong>Was There any Improper Restraint Involved:</strong></label><br />
     <select asp-for="ImproperRestraint">
-        <option value="">Select an Option</option>
-        <option value="1">True</option>
         <option value="0">False</option>
+        <option value="1">True</option>
     </select><br />
 
     <label asp-for="Unrestrained"><strong>Was There Anyone Unrestrained:</strong></label><br />
-    <select asp-for="Unrestrained">
-        <option value="">Select an Option</option>
-        <
-        <option value="1">True</option>
+    <select asp-for="Unrestrained">       
         <option value="0">False</option>
+        <option value="1">True</option>
     </select><br />
 
     <label asp-for="Dui"><strong>Was There a DUI Involved:</strong></label><br />
     <select asp-for="Dui">
-        <option value="">Select an Option</option>
-        <option value="1">True</option>
         <option value="0">False</option>
+        <option value="1">True</option>
     </select><br />
 
     <label asp-for="IntersectionRelated"><strong>Was There an Intersection Involved:</strong></label><br />
     <select asp-for="IntersectionRelated">
-        <option value="">Select an Option</option>
-        <option value="1">True</option>
         <option value="0">False</option>
+        <option value="1">True</option>
     </select><br />
 
     <label asp-for="WildAnimalRelated"><strong>Was There a Wild Animal Involved:</strong></label><br />
     <select asp-for="WildAnimalRelated">
-        <option value="">Select an Option</option>
-        <option value="1">True</option>
         <option value="0">False</option>
+        <option value="1">True</option>
     </select><br />
 
     <label asp-for="DomesticAnimalRelated"><strong>Was There a Domisticated Animal Involved:</strong></label><br />
     <select asp-for="DomesticAnimalRelated">
-        <option value="">Select an Option</option>
-        <option value="1">True</option>
         <option value="0">False</option>
+        <option value="1">True</option>
     </select><br />
 
     <label asp-for="OverturnRollover"><strong>Was There an Overturn/Rollover Involved:</strong></label><br />
     <select asp-for="OverturnRollover">
-        <option value="">Select an Option</option>
-        <option value="1">True</option>
         <option value="0">False</option>
+        <option value="1">True</option>
     </select><br />
 
     <label asp-for="CommercialMotorVehInvolved"><strong>Was There a Commercial Motor Vehicle Involved:</strong></label><br />
     <select asp-for="CommercialMotorVehInvolved">
-        <option value="">Select an Option</option>
-        <option value="1">True</option>
         <option value="0">False</option>
+        <option value="1">True</option>
     </select><br />
 
     <label asp-for="TeenageDriverInvolved"><strong>Was There a Teenage Driver Involved:</strong></label><br />
     <select asp-for="TeenageDriverInvolved">
-        <option value="">Select an Option</option>
-        <option value="1">True</option>
         <option value="0">False</option>
+        <option value="1">True</option>
     </select><br />
 
     <label asp-for="OlderDriverInvolved"><strong>Was There an Older Driver Involved:</strong></label><br />
     <select asp-for="OlderDriverInvolved">
-        <option value="">Select an Option</option>
-        <option value="1">True</option>
         <option value="0">False</option>
+        <option value="1">True</option>
     </select><br />
 
     <label asp-for="NightDarkCondition"><strong>Was it Dark Outside:</strong></label><br />
     <select asp-for="NightDarkCondition">
-        <option value="">Select an Option</option>
-        <option value="1">True</option>
         <option value="0">False</option>
+        <option value="1">True</option>
     </select><br />
 
     <label asp-for="SingleVehicle"><strong>Was There Only a Single Vehicle Involved:</strong></label><br />
     <select asp-for="SingleVehicle">
-        <option value="">Select an Option</option>
-        <option value="1">True</option>
         <option value="0">False</option>
+        <option value="1">True</option>
     </select><br />
 
     <label asp-for="DistractedDriving"><strong>Were There any Distracted Drivers Involved:</strong></label><br />
     <select asp-for="DistractedDriving">
-        <option value="">Select an Option</option>
-        <option value="1">True</option>
         <option value="0">False</option>
+        <option value="1">True</option>
     </select><br />
 
     <label asp-for="DrowsyDriving"><strong>Were There any Drowsy Drivers Involved:</strong></label><br />
     <select asp-for="DrowsyDriving">
-        <option value="">Select an Option</option>
-        <option value="1">True</option>
         <option value="0">False</option>
+        <option value="1">True</option>
     </select><br />
 
     <label asp-for="RoadwayDeparture"><strong>Were There any Roadway Departures Involved:</strong></label><br />
     <select asp-for="RoadwayDeparture">
-        <option value="">Select an Option</option>
-        <option value="1">True</option>
         <option value="0">False</option>
+        <option value="1">True</option>
     </select><br />
 
     <!--Submit Button-->
