--- a/CollisionsDB/CollisionsDB/Views/Shared/_Layout.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <meta http-equiv="Content-Security-Policy"
+          content="default-src 'self'; child-src 'none'; script-src 'self'; img-src 'self'; style-src 'self'" />
 </head>
 <body>
     <header>
