--- a/CollisionsDB/CollisionsDB/Views/Home/Details.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Home/Details.cshtml
@@ -96,3 +96,5 @@
         }
     </tbody>
 </table>
+
+<h3>Percent difference between predicted and actual severity: @(ViewBag.SeverityDifference)</h3>
