Minor tweaks to analytics (unfinished)

--- a/CollisionsDB/CollisionsDB/Views/Home/Details.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Home/Details.cshtml
@@ -97,4 +97,6 @@
     </tbody>
 </table>
 
+<h3>Actual Severity: @Model.CrashSeverityId</h3>
+<h3>Predicted Severity: @ViewBag.RoundedPrediction</h3>
 <h3>Percent difference between predicted and actual severity: @(ViewBag.SeverityDifference)</h3>
