--- a/CollisionsDB/CollisionsDB/Views/Account/Form.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Account/Form.cshtml
@@ -24,21 +24,21 @@
     <label asp-for="MainRoadName"><strong>Name of Road Where Collision Occurred:</strong></label><br />
     <input asp-for="MainRoadName" /><br />
 
-    <label asp-for="City.CityName"><strong>City Where Collision Occurred:</strong></label><br />
-    <select asp-for="City.CityName">
+    <label asp-for="CityId"><strong>City Where Collision Occurred:</strong></label><br />
+    <select asp-for="CityId">
         <option value="">Select a City</option>
         @foreach (City c in ViewBag.Cities)
         {
-            <option value="@c.CityName">@c.CityName</option>
+            <option value="@c.CityId">@c.CityName</option>
         }
     </select><br />
 
-    <label asp-for="County.CountyName"><strong>County Where Collision Occurred:</strong></label><br />
-    <select asp-for="County.CountyName">
+    <label asp-for="CountyId"><strong>County Where Collision Occurred:</strong></label><br />
+    <select asp-for="CountyId">
         <option value="">Select a County</option>
         @foreach (County c in ViewBag.Counties)
         {
-            <option value="@c.CountyName">@c.CountyName</option>
+            <option value="@c.CountyId">@c.CountyName</option>
         }
     </select><br />
 
