--- a/CollisionsDB/CollisionsDB/Views/Account/Summary.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Account/Summary.cshtml
@@ -37,4 +37,4 @@
     </tbody>
 </table>
 
-<div page-model="@Model.PageInfo" page-action="Summary" page-classes-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" page-class-selected="btn-primary" class="btn-group pull-right m1"></div><p style="display:inline-block;">&#128539; YEET</p>
+<div page-model="@Model.PageInfo" page-action="Summary" page-classes-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" page-class-selected="btn-primary" class="btn-group pull-right m1"></div>
