--- a/CollisionsDB/CollisionsDB/Views/_ViewImports.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/_ViewImports.cshtml
@@ -1,5 +1,8 @@
 ﻿@using CollisionsDB
 @using CollisionsDB.Models
 @using CollisionsDB.Models.ViewModels
+@using Microsoft.AspNetCore.Identity
+@using CollisionsDB.Areas.Identity
+@using CollisionsDB.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, CollisionsDB
