--- a/CollisionsDB/CollisionsDB/Views/Home/Calculator.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Home/Calculator.cshtml
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row">
             <div class=" col-md-8 ml-auto mr-auto">
-                <h1 class='text-uppercase'>Collision Details</h1>
+                <h1 class='text-uppercase'>Crash Severity Calculator</h1>
             </div>
         </div>
     </div>
