--- a/CollisionsDB/CollisionsDB/Views/Home/Index.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Home/Index.cshtml
@@ -4,48 +4,49 @@
 
 <!--Hero Section-->
 <div class="bg-parallax fullscreen parallax-overlay" data-jarallax='{"speed": 0.2}' style='background-image: url(~/wwwroot/images/driver_in_car.jpg)'>
-    <div class="d-flex align-items-center">
-        <div class="container">
-            <div class=" row">
-                <div class="col-lg-10 ml-auto mr-auto text-center">
-                    <div class="hero-text-style1">
-                        <div class="tlt h1 font700 text-white text-capitalize mb20">
-                            <ul class="texts">
-                                <li class="text-capitalize" data-out-effect="fadeOut" data-in-effect="fadeIn">Utah Collisions Analysis</li>
-                                <li class="text-capitalize" data-out-effect="fadeOut" data-in-effect="fadeIn">Intex Winter 2022</li>
-                                <li class="text-capitalize" data-out-effect="fadeOut" data-in-effect="fadeIn">Let's Yeet Into the Data</li>
-                            </ul>
-                        </div><!--/.tlt-->
-                        <p class="lead text-white-gray">
-                            Explore More About Utah Collisions
-                        </p>
-                        <a href="#" class="btn btn-rounded btn-white-outline">Learn More</a>
+        <div class="d-flex align-items-center">
+            <div class="container">
+                <div class=" row">
+                    <div class="col-lg-10 ml-auto mr-auto text-center">
+                        <div class="hero-text-style1">
+                            <div class="tlt h1 font700 text-white text-capitalize mb20">
+                                <ul class="texts">
+                                    <li class="text-capitalize" data-out-effect="fadeOut" data-in-effect="fadeIn">Utah Collisions Analysis</li>
+                                    <li class="text-capitalize" data-out-effect="fadeOut" data-in-effect="fadeIn">Intex Winter 2022</li>
+                                    <li class="text-capitalize" data-out-effect="fadeOut" data-in-effect="fadeIn">Lets Yeet Into the Data</li>
+                                </ul>
+                            </div>@*/.tlt*@
+                            <p class="lead text-white-gray">
+                                Explore More About Utah Collisions
+                            </p>
+                            <a href="#" class="btn btn-rounded btn-white-outline">Learn More</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
+<!--3 Column content-->
 <div class="container pt60 pb30">
     <div class="row">
         <div class="col-lg-4 mb30">
             <img src="~/images/website_generic.jpg" class="img-fluid mb20" />
             <h4 class="text-uppercase">About the Site</h4>
             <p>
-                This website provides visitors with information about collisions that have occurred in the state of Utah during the years 2017, 2019, and 2020.
+                This website provides visitors with information about collisions that have occurred in the state of Utah during the years 2016, 2017, and 2019.
                 There is also an admin portal where those authorized can Create, Edit, or Delete Data.
             </p>
         </div>
         <div class="col-lg-4 mb30">
-            <img src="~/images/loren-cutler-4_lfmkpRcZM-unsplash.jpg" class="img-fluid mb20"/>
+            <img src="~/images/loren-cutler-4_lfmkpRcZM-unsplash.jpg" class="img-fluid mb20" />
             <h4 class="text-uppercase">Our Mission</h4>
             <p>
                 To dive deeper into the collisions occuring in Utah. We hope to help in battle to reduce the number and severity of crashes.
             </p>
         </div>
         <div class="col-lg-4 mb30">
-            <img src="~/images/computerpeople.jpg" class="img-fluid mb20"/>
+            <img src="~/images/computerpeople.jpg" class="img-fluid mb20" />
             <h4 class="text-uppercase">Our strategy</h4>
             <p>
                 Using Machine Learning, we have created a model of the top indicators to predict how severe a crash will be.
