--- a/CollisionsDB/CollisionsDB/Views/Shared/Components/Counties/Default.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Shared/Components/Counties/Default.cshtml
@@ -4,11 +4,11 @@
 @model IEnumerable<string>
 
 <div class="d-grid gap-2">
-    <a asp-controller="Home" asp-action="Summary" asp-route-county="" asp-route-pageNum="1" class="btn btn-outline-secondary">View All</a>
+    <a asp-controller="Home" asp-action="Summary" asp-route-county="" asp-route-pageNum="1" class="btn btn-outline-secondary btn-block">View All</a>
 
     @foreach (string c in Model)
     {
-        <a asp-controller="Home" asp-action="Summary" asp-route-county="@c" asp-route-pageNum="1" class="btn @(ViewBag.SelectedCounty == c ? "btn-primary" : "btn-outline-secondary")">@c</a>
+        <a asp-controller="Home" asp-action="Summary" asp-route-county="@c" asp-route-pageNum="1" class="btn btn-block @(ViewBag.SelectedCounty == c ? "btn-primary" : "btn-outline-secondary")">@c</a>
     }
 </div>
 
