Added Analytics page with heatmap generator

--- a/CollisionsDB/CollisionsDB/wwwroot/css/site.css
+++ b/CollisionsDB/CollisionsDB/wwwroot/css/site.css
@@ -1,4 +1,13 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
+﻿/* added stuff by josh */
+.analytics-card {
+   width: 18rem;
+}
+
+.analytics-image {
+    object-fit: contain;
+}
+
+/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
