--- a/CollisionsDB/CollisionsDB/Views/Home/Privacy.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Home/Privacy.cshtml
@@ -51,38 +51,22 @@
                 <li>Register online or place an order for any of our products or services.</li>
                 <li>Voluntarily complete a customer survey or provide feedback on any of our message boards or via email.</li>
                 <li>Use or view our website via your browser’s cookies.</li>
-            </ul>
-
-            <p>Our Company may also receive your data indirectly from the following sources:</p>
-            <ul>
-                <li>[Add any indirect source of data your company has]</li>
-            </ul>
+            </ul>         
 
             <h3>How will we use your data?</h3>
             <p>Our Company collects your data so that we can:</p>
             <ul>
-                <li>Process your order and manage your account.</li>
+                <li>Verify your ability to update / manage the Collision Database</li>
             </ul>
 
             <p>If you agree, Our Company will share your data with our partner companies so that they may offer you their products and services.</p>
             <ul>
                 <li>Brigham Young University</li>
                 <li>Utah Department of Transportation</li>
-            </ul>
-            <p>When Our Company processes your order, it may send your data to, and also use the resulting information from, credit reference agencies to prevent fraudulent purchases.</p>
+            </ul>            
 
             <h3>How do we store your data?</h3>
-            <p>Our Company securely stores your data at [enter the location and describe security precautions taken].</p>
-            <p>Our Company will keep your [enter type of data] for [enter time period]. Once this time period has expired, we will delete your data by [enter how you delete users’ data].</p>
-
-            <h3>Marketing</h3>
-            <p>Our Company would like to send you information about products and services of ours that we think you might like, as well as those of our partner companies.</p>
-            <ul>
-                <li>[List organizations that will receive data]</li>
-            </ul>
-            <p>If you have agreed to receive marketing, you may always opt out at a later date.</p>
-            <p>You have the right at any time to stop Our Company from contacting you for marketing purposes or giving your data to other members of the Our Company Group.</p>
-            <p>If you no longer wish to be contacted for marketing purposes, please click here.</p>
+            <p>Our Company securely stores your data at YEET Inc's state of the art datacenter in La Verkin, UT.</p>            
 
             <h3>What are your data protection rights?</h3>
             <p>Our Company would like to make sure you are fully aware of all of your data protection rights. Every user is entitled to the following:</p>
@@ -93,8 +77,8 @@
             <p><strong>The right to object to processing</strong> – You have the right to object to Our Company’s processing of your personal data, under certain conditions.</p>
             <p><strong>The right to data portability</strong> – You have the right to request that Our Company transfer the data that we have collected to another organization, or directly to you, under certain conditions.</p>
             <p>If you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please contact us at our email:</p>
-            <p>Call us at:</p>
-            <p>Or write to us:</p>
+            <p>Call us at: +1(801)-1111-22222</p>
+            <p>Or write to us: utahcollisiondb@notreal.com</p>
 
             <h3>Cookies</h3>
             <p>Cookies are text files placed on your computer to collect standard Internet log information and visitor behavior information. When you visit our websites, we may collect information from you automatically through cookies or similar technology</p>
@@ -111,8 +95,7 @@
             <p>There are a number of different types of cookies, however, our website uses:</p>
             <ul>
                 <li>Functionality – Our Company uses these cookies so that we recognize you on our website and remember your previously selected preferences. These could include what language you prefer and location you are in. A mix of first-party and third-party cookies are used.</li>
-                <li>Advertising – Our Company uses these cookies to collect information about your visit to our website, the content you viewed, the links you followed and information about your browser, device, and your IP address. Our Company sometimes shares some limited aspects of this data with third parties for advertising purposes. We may also share online data collected through cookies with our advertising partners. This means that when you visit another website, you may be shown advertising based on your browsing patterns on our website.</li>
-                <li>[Add any other types of cookies your company uses]</li>
+                <li>Advertising – Our Company uses these cookies to collect information about your visit to our website, the content you viewed, the links you followed and information about your browser, device, and your IP address. Our Company sometimes shares some limited aspects of this data with third parties for advertising purposes. We may also share online data collected through cookies with our advertising partners. This means that when you visit another website, you may be shown advertising based on your browsing patterns on our website.</li>                
             </ul>
 
             <h3>How to manage cookies</h3>
@@ -126,14 +109,13 @@
 
             <h3>How to contact us</h3>
             <p>If you have any questions about Our Company’s privacy policy, the data we hold on you, or you would like to exercise one of your data protection rights, please do not hesitate to contact us.</p>
-            <p>Email us at:</p>
-            <p>Call us:</p>
-            <p>Or write to us at:</p>
+            <p>Email us at: utahcollisiondb@notreal.com</p>
+            <p>Call us: +1(801)-1111-22222</p>            
 
             <h3>How to contact the appropriate authority</h3>
             <p>Should you wish to report a complaint or if you feel that Our Company has not addressed your concern in a satisfactory manner, you may contact the Information Commissioner’s Office.</p>
-            <p>Email:</p>
-            <p>Address</p>
+            <p>Email: utahcollisiondb@notreal.com</p>
+            <p>Address: TNRB, Brigham Young University, Provo, UT 84602</p>
 
             <div class="post-share"><div id="ssba-modern-2" class="ssba ssbp-wrap left ssbp--theme-4"><div style="text-align:left"><span class="ssba-share-text">Share on:</span><ul class="ssbp-list"><li class="ssbp-li--facebook"><a data-site="" class="ssba_facebook_share ssbp-facebook ssbp-btn" href="http://www.facebook.com/sharer.php?u=https://gdpr.eu/privacy-notice/" target="_blank"><div title="Facebook" class="ssbp-text">Facebook</div></a></li><li class="ssbp-li--google"><a data-site="" class="ssba_google_share ssbp-google ssbp-btn" href="https://plus.google.com/share?url=https://gdpr.eu/privacy-notice/" target="&quot;_blank&quot;"><div title="Google+" class="ssbp-text">Google+</div></a></li><li class="ssbp-li--twitter"><a data-site="" class="ssba_twitter_share ssbp-twitter ssbp-btn" href="http://twitter.com/share?url=https://gdpr.eu/privacy-notice/&amp;text=Writing%20a%20GDPR-compliant%20privacy%20notice%20%28template%20included%29%20" target="&quot;_blank&quot;"><div title="Twitter" class="ssbp-text">Twitter</div></a></li><li class="ssbp-li--linkedin"><a data-site="linkedin" class="ssba_linkedin_share ssba_share_link ssbp-linkedin ssbp-btn" href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://gdpr.eu/privacy-notice/" target="&quot;_blank&quot;"><div title="Linkedin" class="ssbp-text">Linkedin</div></a></li></ul></div></div></div>
         </div>
